<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_avatar"
        android:title="@string/menu_item_drawer_login" />
    <item
        android:id="@+id/fragment_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/menu_item_drawer_favorites" />
    <item
        android:id="@+id/fragment_feedback"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_item_drawer_help" />
    <item
        android:id="@+id/fragment_business"
        android:icon="@drawable/ic_for_business"
        android:title="@string/menu_item_drawer_for_business" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit"
        android:title="@string/menu_item_drawer_logout" />
</menu>