<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_feedback_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/title_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_round_white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:hintTextAppearance="@style/MyHintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_feedback_theme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_feedback_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/hint_enter_your_message_theme"
            android:imeOptions="actionDone"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            android:singleLine="true"
            android:textColorHint="@color/color_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_feedback_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_message"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/btn_round_white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:hintTextAppearance="@style/MyHintText"
        app:layout_constraintBottom_toTopOf="@+id/btn_send_feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_feedback_message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_feedback_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/hint_enter_your_message"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColorHint="@color/color_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_round_main_color"
        android:text="@string/btn_send"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>