<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Connection Problem!!"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ViewFlipper
                android:id="@+id/flipper_vitrina_shop"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:foreground="@drawable/image_gradient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_estimate"
                android:layout_width="100dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_marginBottom="26dp"
                android:background="@drawable/btn_round_transparent"
                android:gravity="center"
                android:paddingStart="@dimen/spacing_tiny_4"
                android:paddingEnd="@dimen/spacing_huge_32"
                android:text="Оценить"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_small_14"
                app:layout_constraintBottom_toBottomOf="@id/flipper_vitrina_shop"
                app:layout_constraintEnd_toEndOf="@id/flipper_vitrina_shop" />

            <Button
                android:id="@+id/btn_rating"
                style="@style/RatingStyle"
                app:layout_constraintBottom_toBottomOf="@+id/tv_estimate"
                app:layout_constraintEnd_toEndOf="@id/tv_estimate"
                app:layout_constraintTop_toTopOf="@+id/tv_estimate"
                tools:text="4.5" />

            <TextView
                android:id="@+id/tv_vitrina_name_of_place"
                app:layout_constraintBottom_toTopOf="@id/tv_event_type"
                style="@style/HeaderTextStyle"
                android:paddingEnd="@dimen/spacing_normal_16"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Салют в честь открытия парка" />

            <TextView
                android:id="@+id/tv_event_type"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="@id/flipper_vitrina_shop"
                style="@style/SubTitleTextStyle"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Шоу" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small_8"
                        android:layout_marginBottom="@dimen/spacing_small_8"
                        android:src="@drawable/ic_place_black"
                        app:layout_constraintBottom_toTopOf="@+id/iv_2"
                        app:layout_constraintEnd_toEndOf="@+id/iv_2"
                        app:layout_constraintStart_toStartOf="@+id/iv_2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_adress"
                        style="@style/MenuSmallTextStyle"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_1"
                        app:layout_constraintStart_toEndOf="@+id/iv_1"
                        app:layout_constraintTop_toTopOf="@+id/iv_1"
                        tools:text="г. Москва, ул. Воронцовская, 20" />

                    <ImageView
                        android:id="@+id/iv_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_normal_16"
                        android:src="@drawable/ic_clock"
                        app:layout_constraintBottom_toTopOf="@+id/iv_4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_1" />

                    <TextView
                        android:id="@+id/tv_shop_timetable"
                        style="@style/MenuSmallTextStyle.Timetable"
                        android:layout_marginEnd="@dimen/spacing_small_8"
                        android:maxEms="18"
                        android:singleLine="false"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_2"
                        app:layout_constraintEnd_toStartOf="@+id/guideline5"
                        app:layout_constraintStart_toEndOf="@+id/iv_2"
                        app:layout_constraintTop_toTopOf="@+id/iv_2"
                        tools:text="Пн-пт 16:00-21:00. Сб-вс 10:00-20:00" />

                    <ImageView
                        android:id="@+id/iv_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small_8"
                        android:src="@drawable/ic_rectangle"
                        app:layout_constraintEnd_toEndOf="@+id/iv_5"
                        app:layout_constraintStart_toStartOf="@+id/iv_5"
                        app:layout_constraintTop_toBottomOf="@+id/iv_5" />

                    <TextView
                        android:id="@+id/tv_price"
                        style="@style/MenuSmallTextStyle"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_3"
                        app:layout_constraintStart_toEndOf="@+id/iv_3"
                        app:layout_constraintTop_toTopOf="@+id/iv_3"
                        tools:text="350-1500" />

                    <ImageView
                        android:id="@+id/iv_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small_8"
                        android:layout_marginBottom="@dimen/spacing_small_8"
                        android:src="@drawable/ic_phone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/iv_2"
                        app:layout_constraintStart_toStartOf="@+id/iv_2"
                        app:layout_constraintTop_toBottomOf="@+id/iv_2" />

                    <TextView
                        android:id="@+id/tv_shop_phone"
                        style="@style/MenuSmallTextStyle"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_4"
                        app:layout_constraintStart_toEndOf="@+id/iv_4"
                        app:layout_constraintTop_toTopOf="@+id/iv_4"
                        tools:text="+7 (499) 234-234-234" />

                    <ImageView
                        android:id="@+id/iv_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_normal_16"
                        android:src="@drawable/ic_globus"
                        app:layout_constraintBottom_toBottomOf="@id/iv_2"
                        app:layout_constraintStart_toStartOf="@+id/guideline5"
                        app:layout_constraintTop_toTopOf="@id/iv_2" />

                    <TextView
                        android:id="@+id/tv_website"
                        style="@style/MenuSmallTextStyle"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_5"
                        app:layout_constraintStart_toEndOf="@+id/iv_5"
                        app:layout_constraintTop_toTopOf="@+id/iv_5"
                        android:text="@string/web_site"
                        app:layout_constraintVertical_bias="0.0" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_news_and_events"
                style="@style/HeaderTextStyle.Normal.Black"
                android:text="@string/title_news_actions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <!--        <androidx.recyclerview.widget.RecyclerView-->
            <!--            android:id="@+id/rv_fragment_list_places"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginStart="@dimen/spacing_small_8"-->
            <!--            android:layout_marginTop="@dimen/spacing_small_8"-->
            <!--            android:layout_marginEnd="@dimen/spacing_small_8"-->
            <!--            android:orientation="horizontal"-->
            <!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/tv_news_and_events"-->
            <!--            tools:listitem="@layout/list_item_shop_offer"-->
            <!--            tools:showIn="@layout/list_item_shop_offer">-->

            <!--        </androidx.recyclerview.widget.RecyclerView>-->

            <TextView
                android:id="@+id/tv_about"
                style="@style/HeaderTextStyle.Normal.Black"
                android:text="@string/title_about_us"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_news_and_events" />

            <TextView
                android:id="@+id/tv_about_shop_text"
                style="@style/DescriptionTextStyle.Margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_about"
                tools:text="Товарищи! консультация с широким активом требуют определения и уточнения системы обучения кадров, соответствует насущным потребностям. С другой стороны сложившаяся структура организации способствует подготовки и реализации систем массового участия. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании новых предложений. С другой стороны укрепление и развитие структуры требуют от нас анализа дальнейших направлений развития." />

            <TextView
                android:id="@+id/tv_events"
                style="@style/HeaderTextStyle.Normal.Black"
                android:text="@string/events"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pdf" />

            <ImageView
                android:id="@+id/iv_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_file_download_black_24dp"
                android:layout_marginStart="@dimen/spacing_normal_16"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/tv_about_shop_text"
                app:layout_constraintEnd_toStartOf="@id/tv_pdf"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small_8"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/color_text_light"
                android:textSize="@dimen/font_small_14"
                android:text="Посмотреть меню, расписание, услуги"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/iv_download"
                app:layout_constraintTop_toTopOf="@id/iv_download"
                app:layout_constraintBottom_toBottomOf="@id/iv_download"
                tools:visibility="visible" />

            <!--        <androidx.recyclerview.widget.RecyclerView-->
            <!--            android:id="@+id/rv_fragment_vitrina_shop_list_events"-->
            <!--            style="@style/RvMain.Shop"-->
            <!--            android:paddingTop="@dimen/spacing_small_8"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/tv_events"-->
            <!--            tools:listitem="@layout/list_item_event" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>